Added logging application insight

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "Urls": {
     "BaseUrl": "http://host.docker.internal:59283"
+  },
+
+  "ConnectionStrings": {
+    "ApplicationInsightConnectionString": "--placeholderforapplicationisightconnectionstring--"
   }
 }
